--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,8 +3,12 @@ name = "mcstories-worker"
 main = "src/index.js"
 compatibility_date = "2024-07-25"
 
-# Add this flag to enable Node.js compatibility
-nodejs_compat = true
+# Add this build section
+[build]
+command = "npm install"
+
+# Add this compatibility_flags section
+compatibility_flags = ["nodejs_compat"]
 
 # Binding for your D1 Database
 [[d1_databases]]
