--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,26 +2,23 @@
 name = "mcstories-worker"
 main = "src/index.js"
 compatibility_date = "2024-07-25"
-
-# Add compatibility flags at the top level
 compatibility_flags = ["nodejs_compat"]
-
 workers_dev = false
 
-# Binding for your D1 Database
+# This section correctly enables logs and tracing for your deployed Worker
+[observability]
+enabled = true
+
 [[d1_databases]]
 binding = "STORIES_DB"
 database_name = "mcstories-db"
 database_id = "b6ac304b-eddc-42ba-acb9-dfb8954d2940"
 
-# Binding for the Browser Rendering API (for Puppeteer)
 [browser]
 binding = "MY_BROWSER"
 
-# Trigger for the scheduled scraper to run every 5 minutes
 [triggers]
 crons = ["*/5 * * * *"]
 
-[observability]
-enabled = true
-head_sampling_rate = 1 # optional. default = 1.
+[dev]
+persist_to = ".wrangler/state"
