--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
   },
   "dependencies": {
   "@cloudflare/puppeteer": "^0.0.5",
-  "cheerio": "^1.0.0-rc.12",
-  "puppeteer-extra": "^3.3.6",
-  "puppeteer-extra-plugin-stealth": "^2.11.2"
+  "cheerio": "^1.0.0-rc.12"
 },
   "devDependencies": {
     "wrangler": "^4.37.1"
